# wake-on-lan-http

./: .gitignore  LICENSE.md  README.md  api.py  cli.py  devices-template.json  index.html  pyproject.toml
wake_on_lan_http/: __init__.py  api.py  cli.py  core.py  env.py
