[project]
name = "wake-on-lan-http"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick",email = "patrsc@nubu.at"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "wakeonlan (>=3.1.0,<4.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
